--- a/ArjunaCore/arjunacore/pom.xml
+++ b/ArjunaCore/arjunacore/pom.xml
@@ -20,8 +20,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>arjunacore</artifactId>
-  <name>ArjunaCore packaged module</name>
-  <description>arjunacore uber jar</description>
+  <name>arjunacore</name>
+  <description>ArjunaCore packaged module</description>
   <packaging>jar</packaging>
   <build>
     <plugins>
