--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -21,8 +21,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>arjuna</artifactId>
-  <name>ArjunaCore arjuna module</name>
-  <description>arjuna</description>
+  <name>arjuna</name>
+  <description>ArjunaCore arjuna module</description>
   <packaging>jar</packaging>
 
   <build>
