--- a/ArjunaCore/txoj/pom.xml
+++ b/ArjunaCore/txoj/pom.xml
@@ -20,8 +20,8 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>txoj</artifactId>
-  <name>ArjunaCore txoj module</name>
-  <description>txoj</description>
+  <name>txoj</name>
+  <description>ArjunaCore txoj module</description>
   <packaging>jar</packaging>
   <build>
     <sourceDirectory>classes</sourceDirectory>
