JBTM-1693 update to replace jboss-as-arquillian-container-managed with wildfly-arquillian-container-managed

--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -148,8 +148,8 @@
             </build>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
@@ -182,8 +182,8 @@
             </build>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
@@ -217,8 +217,8 @@
             </build>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
