--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -174,8 +174,8 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
@@ -216,8 +216,8 @@
             </build>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
