--- a/pom.xml
+++ b/pom.xml
@@ -482,6 +482,7 @@
     <version.org.hibernate.javax.persistence>1.0.1.Final</version.org.hibernate.javax.persistence>
     <version.org.jboss.spec.javax.transaction>1.0.1.Final</version.org.jboss.spec.javax.transaction>
     <version.org.jboss.spec.javax.ejb>1.0.2.Final</version.org.jboss.spec.javax.ejb>
+    <version.org.jboss.spec.javax.interceptor>1.0.0.Alpha3</version.org.jboss.spec.javax.interceptor>
     <version.org.jboss.spec.javax.servlet>1.0.1.Final</version.org.jboss.spec.javax.servlet>
     <version.org.jboss.spec.jboss-javaee-6.0>3.0.1.Final</version.org.jboss.spec.jboss-javaee-6.0>
     <version.org.jacorb.jacorb>2.3.1.jbossorg-1</version.org.jacorb.jacorb>
@@ -518,8 +519,9 @@
     <version.org.codehaus.jettison>1.3.1</version.org.codehaus.jettison>
     <version.junit>4.10</version.junit> 
     <version.org.jboss.byteman>2.1.2</version.org.jboss.byteman>
-    <version.org.jboss.arquillian.core>1.0.0.Final</version.org.jboss.arquillian.core>
+    <version.org.jboss.arquillian.core>1.0.3.Final</version.org.jboss.arquillian.core>
     <version.org.jboss.arquillian.osgi>1.0.2.Final</version.org.jboss.arquillian.osgi>   
+    <version.javax.annotation>1.2-b04</version.javax.annotation>
   </properties>
   <profiles>
     <profile>
