--- a/ArjunaJTS/idl/jacorb/pom.xml
+++ b/ArjunaJTS/idl/jacorb/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jboss.narayana.jts</groupId>
     <artifactId>narayana-idl</artifactId>
-    <version>5.0.0.M3-SNAPSHOT</version>
+    <version>5.0.0.M3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
