--- a/rest-tx/util/pom.xml
+++ b/rest-tx/util/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>rest-tx</artifactId>
-    <version>5.0.0.M3-SNAPSHOT</version>
+    <version>5.0.0.M3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
