--- a/rest-tx/integration/pom.xml
+++ b/rest-tx/integration/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.jboss.narayana.rts</groupId>
         <artifactId>rest-tx</artifactId>
-        <version>5.0.0.M3</version>
+        <version>5.0.0.M4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
