--- a/rest-tx/webservice/pom.xml
+++ b/rest-tx/webservice/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.jboss.narayana.rts</groupId>
     <artifactId>rest-tx</artifactId>
-    <version>5.0.0.M3</version>
+    <version>5.0.0.M4-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -28,7 +28,7 @@
   <name>RESTful Atomic Transactions War Packaging</name>
   <description>Provides Transactions for web applications</description>
   <properties>
-    <version.artifactId>5.0.0.M3</version.artifactId>
+    <version.artifactId>5.0.0.M4-SNAPSHOT</version.artifactId>
     <artifactId.name>restat-web</artifactId.name>
   </properties>
   <dependencies>
