--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -32,7 +32,7 @@
     <parent>
         <groupId>org.jboss.narayana</groupId>
         <artifactId>narayana-all</artifactId>
-        <version>5.0.0.M3</version>
+        <version>5.0.0.M4-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
