--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -45,6 +45,17 @@
       <plugin>
         <inherited>false</inherited>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>com/arjuna/ats/arjuna/tools/stats/TxPerfGraph.java</exclude>
+            <exclude>com/arjuna/ats/arjuna/tools/stats/TxPerfPlugin.java</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <configuration>
           <skip>false</skip>
@@ -108,13 +119,6 @@
       <groupId>org.hornetq</groupId>
       <artifactId>hornetq-journal</artifactId>
       <version>${version.org.hornetq}</version>
-    </dependency>
-    <dependency>
-      <groupId>orson</groupId>
-      <artifactId>orson</artifactId>
-      <version>${version.orson}</version>
-      <scope>system</scope>
-      <systemPath>${orson.jar.location}/orson-0.5.0.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>jfree</groupId>
@@ -396,5 +400,31 @@
 			</plugins>
 		</build>
 	</profile>
+  <profile>
+    <id>community</id>
+    <dependencies>
+      <dependency>
+        <groupId>orson</groupId>
+        <artifactId>orson</artifactId>
+        <version>${version.orson}</version>
+        <scope>system</scope>
+        <systemPath>${orson.jar.location}/orson-0.5.0.jar</systemPath>
+      </dependency>
+    </dependencies>
+    <build>
+      <plugins>
+        <plugin>
+          <inherited>false</inherited>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+        <configuration combine.self="override">
+          <excludes>
+          </excludes>
+        </configuration>
+
+        </plugin>
+      </plugins>
+    </build>
+  </profile>
   </profiles>
 </project>
