--- a/pom.xml
+++ b/pom.xml
@@ -470,7 +470,6 @@
     <version.log4j>1.2.15</version.log4j>
     <version.org.slf4j>1.6.1</version.org.slf4j>
     <version.tanukisoft>3.2.3</version.tanukisoft>
-    <version.orson>0.5.0</version.orson>
     <version.dom4j>1.6.1</version.dom4j>
     <version.jfree>1.0.9</version.jfree>
     <version.com.h2database>1.3.168</version.com.h2database>
@@ -626,5 +625,11 @@
                 <version.emma>2.0.5312</version.emma>
             </properties>
         </profile>
+    <profile>
+      <id>community</id>
+      <properties>
+        <version.orson>0.5.0</version.orson>
+      </properties>
+    </profile>
   </profiles>
 </project>
