--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -64,11 +64,6 @@
   </build>
   <dependencies>
     <dependency>
-      <groupId>org.jboss.narayana.arjunacore</groupId>
-      <artifactId>arjunacore-services</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
       <version>${project.version}</version>
@@ -218,6 +213,16 @@
           <version>${project.version}</version>
         </dependency>
       </dependencies>
+    </profile>
+    <profile>
+      <id>community</profile>
+  <dependencies>
+    <dependency>
+      <groupId>org.jboss.narayana.arjunacore</groupId>
+      <artifactId>arjunacore-services</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
     </profile>
   </profiles>
 </project>
