--- a/pom.xml
+++ b/pom.xml
@@ -424,7 +424,6 @@
     <version.commons-logging>1.1.0.jboss</version.commons-logging>
     <version.log4j>1.2.15</version.log4j>
     <version.org.slf4j>1.6.1</version.org.slf4j>
-    <version.tanukisoft>3.2.3</version.tanukisoft>
     <version.dom4j>1.6.1</version.dom4j>
     <version.jfree>1.0.9</version.jfree>
     <version.com.h2database>1.3.168</version.com.h2database>
@@ -533,8 +532,10 @@
       <id>community</id>
       <properties>
         <version.orson>0.5.0</version.orson>
+        <version.tanukisoft>3.2.3</version.tanukisoft>
       </properties>
     </profile>
+    <profile>
             <id>findbugs</id>
             <build>
                 <pluginManagement>
