JBTM-1745 Bind the emma goal to the test phase when the codeCoverage profile is activated

--- a/pom.xml
+++ b/pom.xml
@@ -511,6 +511,14 @@
                                 <dataFile>${project.build.directory}/test-classes/coverage.ec</dataFile>
                             </dataFiles>
                         </configuration>
+                        <executions>
+                          <execution>
+                            <phase>test</phase>
+                            <goals>
+                              <goal>emma</goal>
+                            </goals>
+                          </execution>
+                        </executions>
                         <dependencies>
                             <dependency>
                                 <groupId>emma</groupId>
