--- a/XTS/localjunit/crash-recovery-tests/pom.xml
+++ b/XTS/localjunit/crash-recovery-tests/pom.xml
@@ -17,4 +17,16 @@
     <packaging>jar</packaging>
     <name>Narayana: XTS localjunit crash-recovery-tests</name>
     <description>xts crash recovery tests</description>
+    <build>
+    <plugins>
+      <plugin>
+        <inherited>false</inherited>
+        <groupId>org.jboss.byteman</groupId>
+        <artifactId>byteman-rulecheck-maven-plugin</artifactId>
+        <configuration>
+          <additionalClassPath>../xtstest/target/classes</additionalClassPath>
+        </configuration>
+	  </plugin>
+    </plugins>
+    </build>
 </project>
