JBTM-1670 Use combine.children append instead of override

--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -417,7 +417,7 @@
           <inherited>false</inherited>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-        <configuration combine.self="override">
+        <configuration combine.children="append">
           <excludes>
           </excludes>
         </configuration>
